[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pathpicker"
description = "PathPicker accepts a wide range of input -- output from git commands, grep results, searches -- pretty much anything. After parsing the input, PathPicker presents you with a nice UI to select which files you're interested in. After that you can open them in your favorite editor or execute arbitrary commands."
authors = [{ name = "Peter Cottle", email = "pcottle@fb.com" }]
license = { "file" = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.7"

[tool.setuptools]
# Install the fpp executable:
script-files = ["fpp"]

[project.optional-dependencies]
dev = [
  "autoimport",
  "black",
  "flake8",
  # "flake8-black",
  # "flake8-bugbear",
  # "flake8-comprehensions",
  # "flake8-copyright",
  # "flake8-eradicate",
  # "flake8-isort",
  # "flake8-use-fstring",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "vulture",
]

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.messages_control]
disable = [
  "fixme",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-self-use",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-public-methods",
  "too-many-return-statements",
]
